--- a/WufooThemeKit/less/custom.less
+++ b/WufooThemeKit/less/custom.less
@@ -1,3 +1,10 @@
-.wufoo .h2 {
+.wufoo #header {
   display: none;
+}
+.wufoo .phone span label {
+	display: none;
+}
+
+.wufoo .phone span.symbol {
+	margin-top: 4px;
 }
